# adbnik

./: .gitattributes  .gitignore  BRANCHES.md  BRANCHING.md  CHANGELOG-legacy.md  CHANGELOG.md  CONTRIBUTING.md  DeviceDeck.spec  LICENSE  MANIFEST.in  NOTICE  PUBLISH_SOURCE_REPO.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  SECURITY.md  adbnik.spec  main.py  pyproject.toml  requirements.txt
.github/: RELEASE_NOTES_v1.0.2.md  RELEASE_NOTES_v1.1.1.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.3.1.md  RELEASE_NOTES_v1.3.2.md  RELEASE_NOTES_v1.3.3.md  RELEASE_NOTES_v1.3.4.md  RELEASE_NOTES_v1.3.5.md  RELEASE_NOTES_v1.3.6.md  RELEASE_NOTES_v1.3.7.md  RELEASE_NOTES_v1.3.8.md  RELEASE_NOTES_v1.3.9.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: pages.yml  publish-pypi.yml  release.yml  tests.yml  windows-installer.yml
adbnik/: __init__.py  app.py  config.py  session.py  setup_shortcut.py  urls.py
adbnik/services/: __init__.py  adb_devices.py  commands.py  remote_clients.py
adbnik/ui/: ansi_html.py  app_icon.py  camera_opencv.py  file_dialogs.py  first_run_dialog.py  icon_utils.py  main_window.py  preferences_dialog.py  session_login_dialog.py  styles.py  win_scrcpy_hotkey.py
adbnik/ui/tabs/: __init__.py  camera_tab.py  file_explorer_tab.py  scrcpy_tab.py  terminal_tab.py
branding/: export_branding_assets.py
devicedeck/: __init__.py  app.py  config.py  session.py
devicedeck/services/: adb_devices.py  commands.py  remote_clients.py
devicedeck/ui/: combo_utils.py  first_run_dialog.py  icon_utils.py  main_window.py  preferences_dialog.py  session_login_dialog.py  styles.py
devicedeck/ui/tabs/: file_explorer_tab.py  terminal_tab.py
docs/: PYPI_PUBLISH.md  README-main-branch.md  README.md  SIGNPATH_SETUP.md  WINDOWS_CODE_SIGNING.md  index.html  pypi-yank-legacy-versions.md  release-notes-v1.0.0.md  release-notes-v4.1.2.md  release-notes-v4.1.3.md  release-notes-v6.0.0.md  release-notes-v6.1.1.md  release-notes-v6.1.2.md  release-notes-v6.1.3.md
docs/css/: site.css
docs/guide/: camera.html  explorer.html  index.html  screen.html  terminal.html
docs/release-notes/archive/: release-notes-v4.0.0.md  release-notes-v4.0.1.md  release-notes-v4.1.1.md  release-notes-v5.0.0.md  release-notes-v5.1.0.md  release-notes-v5.1.1.md  release-notes-v5.1.2.md
docs/screenshots/: README.md
installer/: adbnik.iss  adbnik.nsi
installers/: README-main-branch.md  README.md
packaging/windows/: INSTALLER_NOTICE.txt  README.md  adbnik.iss  adbnik.spec  build.ps1  read_project_version.py
release_downloads/: README.md
scripts/: Sync-DistributionPathsFromNaveen.ps1  build_installer.ps1  build_installer_nsis.ps1  build_windows_exe.ps1  compute_release_hashes.ps1  export_app_icon.py  publish_source_repo.ps1  sign_windows_artifacts.ps1
site/: DEPLOY.md  changelog.html  config.js  docs.html  download.html  index.html  install.html  robots.txt  sitemap.xml
site/assets/: site.js  style.css
site/downloads/: README.md
tests/: test_ansi_html.py  test_config.py  test_first_serial_token.py
tools/: filter_strip_cursor_coauthor.txt  strip_cursor_coauthor_msg.py
