[build-system]
# Cap setuptools so wheels use Metadata 2.1/2.2 without PEP 639 fields that older Twine rejects
# ("license-expression" / "license-file"). Use Twine 5.1+ if you prefer latest setuptools.
requires = ["setuptools>=61,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adbnik"
version = "0.2.9"
description = "Adbnik — ADB device workspace: shell, APK install, SSH, serial, files, USB screen (PyQt5 desktop)."
readme = "README.md"
# Use the LICENSE file so PyPI can show full text ("View license"); `text = "MIT"` alone is too minimal and often breaks that page.
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Adbnik contributors" }]
keywords = ["android", "adb", "apk", "ssh", "serial", "scrcpy", "pyqt5", "sftp", "desktop", "screen-mirroring"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: Qt",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "PyQt5>=5.15.11,<6.0",
  "pyserial>=3.5,<4.0",
  "paramiko>=3.0,<5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
build = ["pyinstaller>=6.0,<7.0"]

[project.scripts]
adbnik = "adbnik.app:main"

[project.urls]
Homepage = "https://nvnkennedy.github.io/adbnik/"
Repository = "https://github.com/nvnkennedy/adbnik"
Documentation = "https://github.com/nvnkennedy/adbnik#readme"
"PyPI" = "https://pypi.org/project/adbnik/"

[tool.setuptools.packages.find]
where = ["."]
include = ["adbnik*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
