[build-system]
# Cap setuptools so wheels use Metadata 2.1/2.2 without PEP 639 fields that older Twine rejects
# ("license-expression" / "license-file"). Use Twine 5.1+ if you prefer latest setuptools.
requires = ["setuptools>=61,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adbnik"
version = "6.0.0"
description = "PyQt5 desktop workspace for Android ADB, SSH/serial terminals, SFTP/FTP file transfer, and screen mirroring (scrcpy)."
readme = "README.md"
# Apache-2.0. Full text in LICENSE; NOTICE for attribution boilerplate.
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Adbnik contributors" }]
keywords = ["android", "adb", "apk", "ssh", "serial", "scrcpy", "pyqt5", "sftp", "desktop", "screen-mirroring"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 5 - Production/Stable",
  "Environment :: X11 Applications :: Qt",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "PyQt5>=5.15.11,<6.0",
  "pyserial>=3.5,<4.0",
  "paramiko>=3.0,<5.0",
  "qt-thread-updater>=1.1,<2",
  "QtPy>=2.0,<3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
build = ["pyinstaller>=6.0,<7.0"]

[project.scripts]
adbnik = "adbnik.app:main"
adbnik-setup = "adbnik.setup_shortcut:main"

[project.urls]
Homepage = "https://nvnkennedy.github.io/adbnik/"
Repository = "https://github.com/nvnkennedy/adbnik"
Documentation = "https://nvnkennedy.github.io/adbnik/guide/index.html"
Changelog = "https://github.com/nvnkennedy/adbnik/blob/main/CHANGELOG.md"
"Release notes (v6.0.0)" = "https://github.com/nvnkennedy/adbnik/blob/main/docs/release-notes-v6.0.0.md"
"Windows installer (unsigned)" = "https://github.com/nvnkennedy/adbnik/releases/latest"
"PyPI files" = "https://pypi.org/project/adbnik/#files"

[tool.setuptools.packages.find]
where = ["."]
include = ["adbnik*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
